# rules_scala

./: .bazelrc  .gitignore  .scalafmt.conf  CODEOWNERS  Governance.md  MODULE.bazel  README.md  WORKSPACE  scala_config.bzl  test_dependency_versions.sh  test_rules_scala.sh  test_thirdparty_version.sh  test_version.sh
.bazelci/: presubmit.yml
.bcr/: metadata.template.json
.github/workflows/: publish-to-bcr.yml  release.yml  release_prep.sh
docs/: cross-compilation.md  scala_library.md
dt_patches/: dt_patch_test.sh
dt_patches/compiler_sources/: extensions.bzl
dt_patches/test_dt_patches/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE
dt_patches/test_dt_patches_user_srcjar/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  extensions.bzl
examples/crossbuild/: MODULE.bazel  WORKSPACE
examples/crossbuild/1_single/: BUILD
examples/crossbuild/2_deps/: BUILD
examples/crossbuild/3_select/: BUILD
examples/native/: BUILD  Greetings.scala  HelloNative.scala  Intrinsics.scala  MODULE.bazel  README.md
examples/overridden_artifacts/: MODULE.bazel  WORKSPACE
examples/scala3/: MODULE.bazel  WORKSPACE
examples/semanticdb/: MODULE.bazel  WORKSPACE
examples/testing/multi_frameworks_toolchain/: MODULE.bazel  WORKSPACE
examples/testing/scalatest_repositories/: MODULE.bazel  WORKSPACE
examples/testing/specs2_junit_repositories/: MODULE.bazel  WORKSPACE
examples/twitter_scrooge/: MODULE.bazel  WORKSPACE
protoc/: BUILD  toolchains.bzl
protoc/private/: protoc_integrity.bzl  protoc_toolchains.bzl  toolchain_impl.bzl
scala/: BUILD  deps.bzl  latest_deps.bzl  scala_cross_version_select.bzl  scala_toolchain.bzl  toolchains.bzl  toolchains_repo.bzl
scala/extensions/: config.bzl  deps.bzl  protoc.bzl
scala/private/: toolchain_defaults.bzl
scala/private/extensions/: dev_deps.bzl
scala/private/macros/: compiler_sources_integrity.bzl  scala_repositories.bzl  workspace_compat.bzl
scala/private/macros/test/: MODULE.bzlmod_test  MODULE.bzlmod_test_root_module
scala/private/phases/: phase_compile.bzl  phase_runenvironmentinfo_provider.bzl  phase_scalac_provider.bzl  phase_write_executable.bzl  phases.bzl
scala/private/rules/: scala_binary.bzl  scala_junit_test.bzl  scala_library.bzl  scala_test.bzl
scala/support/: BUILD
scala_native/: BUILD  providers.bzl  repositories.bzl  scala_native_library.bzl  scala_native_toolchain.bzl  setup_scala_native_toolchain.bzl
scala_native/private/linker/: BUILD  LinkerWorker.scala  NativeLinker.scala
scala_native/private/phases/: phase_native_compile.bzl
scala_native/private/rules/: scala_native_binary.bzl  scala_native_library.bzl
scala_native/toolchains/: BUILD.bazel
scala_proto/: scala_proto_toolchain.bzl
scripts/: README.md  create_repository.py  update_compiler_sources_integrity.py  update_protoc_integrity.py
scripts/lib/: update_integrity.py
src/java/io/bazel/rulesscala/coverage/instrumenter/: BUILD
src/java/io/bazel/rulesscala/exe/: LauncherFileWriter.java
src/java/io/bazel/rulesscala/scala_test/: Runner.java
src/java/io/bazel/rulesscala/scalac/: BUILD  definitions.bzl
src/java/io/bazel/rulesscala/scalac/reporter/: BUILD
src/java/io/bazel/rulesscala/scalac/reporter/scala_3/: BazelConsoleReporter.java
src/java/io/bazel/rulesscala/scalac/reporter/since_3_7_2_before_3_7_4/: CompilerCompat.java
src/java/io/bazel/rulesscala/scalac/reporter/since_3_7_4/: CompilerCompat.java
src/java/io/bazel/rulesscala/scalac/reporter/since_3_before_3_3/: CompilerCompat.java
src/java/io/bazel/rulesscala/worker/: BUILD
test/: BUILD  EnvAttributeBinary.scala  EnvAttributeManualTest.scala  EnvAttributeTest.scala  env_vars.bzl
test/compiler_sources_integrity/: .bazelrc  MODULE.bazel  WORKSPACE
test/scala_native/: .bazelrc  BUILD  HelloNative.scala
test/scalafmt/: .scalafmt.conf
test/shell/: test_bzlmod_macros.sh  test_coverage_equals_in_target.sh  test_coverage_scalatest.sh  test_coverage_scalatest_resources.sh  test_coverage_specs2_with_junit.sh  test_env_attribute_expansion.sh  test_examples.sh  test_invalid_scalacopts.sh  test_runner.sh  test_scala_config.sh  test_semanticdb.sh
test/src/main/scala/scalarules/test/java_classpath_order/: BUILD  Original.scala  Overridable.java  VerifyOverride.scala
test/src/main/scala/scalarules/test/junit/: EnvAttributeJunitTest.scala
test_cross_build/: MODULE.bazel  WORKSPACE
test_cross_build/scalafmt/: .scalafmt2.conf  .scalafmt3.conf  BUILD
test_cross_build/version_specific/: BUILD
test_version/: MODULE.bazel.template  WORKSPACE.template
tools/: BUILD  bazel.rc.buildkite
