"""Bazel module ./test/shell/test_examples.sh tests"""

module(name = "cross_build")

bazel_dep(name = "rules_scala")
local_path_override(
    module_name = "rules_scala",
    path = "..",
)

bazel_dep(name = "latest_dependencies", dev_dependency = True)
local_path_override(
    module_name = "latest_dependencies",
    path = "../deps/latest",
)

scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(
    scala_version = "3.1.3",
    scala_versions = [
        "2.11.12",
        "2.12.20",
        "2.13.17",
        "3.1.3",
        "3.2.2",
        "3.3.7",
    ],
)
use_repo(scala_config, "rules_scala_config")

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
    dev_dependency = True,
)
scala_deps.settings(
    fetch_sources = True,
)
scala_deps.scala()
scala_deps.scalafmt()
scala_deps.scalatest()
