"""Default Scala Native toolchain configuration."""

load(
  "//scala_native:setup_scala_native_toolchain.bzl",
  "setup_scala_native_toolchain",
)

# Default Scala Native toolchain. Assume Scala Native 0.5.10 (and Scala 3.8.1).
setup_scala_native_toolchain(
    name = "default_scala_native_toolchain",
    nscplugin = "@org_scala_native_nscplugin//jar",
    scala_native_version = "0.5.10",
)
