"""Bazel module ./test/shell/test_examples.sh tests"""

module(name = "specs2_junit_repositories")

bazel_dep(name = "rules_scala")
local_path_override(
    module_name = "rules_scala",
    path = "../../..",
)

bazel_dep(name = "latest_dependencies", dev_dependency = True)
local_path_override(
    module_name = "latest_dependencies",
    path = "../../../deps/latest",
)

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
    dev_dependency = True,
)
scala_deps.settings(
    fetch_sources = True,
)
scala_deps.scala()
scala_deps.specs2()
